[gd_scene load_steps=6 format=3 uid="uid://jwhu3i71hii6"]

[ext_resource type="Texture2D" uid="uid://cfkr64kwdvftw" path="res://testing_area/texture_07.png" id="1_ckd4d"]
[ext_resource type="Script" uid="uid://kntrd4pb3k7e" path="res://Dialogue_System/ui.gd" id="2_be1jx"]
[ext_resource type="PackedScene" uid="uid://cmik2nw5ts56e" path="res://testing_area/NPC.tscn" id="3_eqwb4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_be1jx"]
albedo_color = Color(0.340608, 0.603019, 0, 1)
albedo_texture = ExtResource("1_ckd4d")
uv1_triplanar = true

[sub_resource type="Environment" id="Environment_eqwb4"]
background_color = Color(0, 0.921338, 0.897847, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[node name="Node3D" type="Node3D"]

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(1000, 1, 1000)
material = SubResource("StandardMaterial3D_be1jx")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_be1jx")

[node name="Dialogue Box" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -138.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="dialogueBackground" type="ColorRect" parent="UI/Dialogue Box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.301961)

[node name="dialogueText" type="Label" parent="UI/Dialogue Box/dialogueBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "test test test test"

[node name="Choice Box" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -312.0
offset_right = -24.0
offset_bottom = -144.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Choice Box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Button" type="Button" parent="UI/Choice Box/VBoxContainer"]
visible = false
layout_mode = 2
text = "Choice 1"

[node name="Button2" type="Button" parent="UI/Choice Box/VBoxContainer"]
visible = false
layout_mode = 2
text = "Choice 2"

[node name="Button3" type="Button" parent="UI/Choice Box/VBoxContainer"]
visible = false
layout_mode = 2
text = "Choice 3"

[node name="Button4" type="Button" parent="UI/Choice Box/VBoxContainer"]
visible = false
layout_mode = 2
text = "Choice 4"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.891458, 0.453104, 0, -0.453104, 0.891458, 0, 2.413, 0)

[node name="Npc" parent="." instance=ExtResource("3_eqwb4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.727)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_eqwb4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.337358, 0.941376, 0, -0.941376, 0.337358, 0, 0, 0)

[connection signal="pressed" from="UI/Choice Box/VBoxContainer/Button" to="UI" method="_on_choice1"]
[connection signal="pressed" from="UI/Choice Box/VBoxContainer/Button2" to="UI" method="_on_choice2"]
[connection signal="pressed" from="UI/Choice Box/VBoxContainer/Button3" to="UI" method="_on_choice3"]
[connection signal="pressed" from="UI/Choice Box/VBoxContainer/Button4" to="UI" method="_on_choice4"]
